apps/immich/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: immich
  name: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/client-max-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: immich.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - immich.lumpiasty.xyz
      secretName: immich-ingress
